frontend/k8s/deployment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gyuho0897/pipely-frontend:__IMAGE_TAG__
          ports:
            - containerPort: 80
